# lib/controllers/user.js
@@ -486,8 +486,6 @@ self.verifyCode = async (req, res) => {
             return res.status(409).send({ error: 'El código ha caducado.' });
 
         if (user.validateKey.resetPassword.resetCode == body.resetCode) {
-            user.validateKey.resetPassword.resetCode = null;
-            user.validateKey.limitCodeTime = null;
             user.validateKey.resetPassword.validCode = true;
 
             await user.save();
@@ -513,9 +511,20 @@ self.resetPassword = async (req, res) => {
             return res.status(409).send({ error: 'User no encontrado.' })
         }
 
-        if (usuario.validateKey.resetPassword.validCode) {
+        const newTime = new Date().getTime()
+
+        if(usuario.validateKey.limitCodeTime < newTime){
+            
+            usuario.validateKey.limitCodeTime = null 
+
+            return res.status(409).send({error: 'El código ha caducado.'})
+        }
+
+        if (usuario.validateKey.resetPassword.validCode == true && usuario.validateKey.resetPassword.resetCode == req.body.resetCode) {
             usuario.pwd = body.pwd;
             usuario.resetPassword.resetPassword.validCode = false;
+            usuario.validateKey.resetPassword.resetCode = null;
+            usuario.validateKey.limitCodeTime = null;
             usuario.lastUpdate = new Date().getTime();
             usuario.tokens = []
 
@@ -560,7 +569,9 @@ self.updatePicture = async (req, res) => {
 
         await User.updateOne({ _id: user._id }, { urlImg: url, lastUpdate: (new Date()).getTime() })
 
-        res.status(202).send(user)
+        const result = await User.findOne({_id: user._id})
+
+        res.status(202).send(result)
     } catch (error) {
         res.status(400).send({ error: error.message })
     }
@@ -608,7 +619,7 @@ self.verifyPhone = async (req, res) => {
 
 }
 
-self.validatePhoneNumber = async (req, res) => {
+self.validatePhone = async (req, res) => {
     try {
         const phone = req.user.phone
         var body = JSON.parse(JSON.stringify(req.body));
